# notes.rs

./: Cargo.toml  README.md
migrations/2019-11-12-085231_create_notes/: up.sql
src/: main.rs  schema.rs
src/data/: notes.rs
src/http/: api.rs  app.rs  index.rs  mod.rs  notes.rs
src/model/: notes.rs
src/service/: notes.rs
