[package]
name = "rnote"
version = "0.1.0"
authors = ["Suyash Mohan <suyash@binary.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
futures = "0.1"
env_logger = "0.7"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = "0.4"
